welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:10: error: ';' expected but 'else' found.
	else if (Math.abs(10-a) = Math.abs(10-b) {
        ^